# cl-plusplus

./: CMakeLists.txt  Makefile  README.md  clpp_application_matmul.cpp  clpp_buffer.cpp  clpp_buffer_basic_readwrite.cpp  clpp_buffer_copy.cpp  clpp_buffer_fill_map.cpp  clpp_buffer_object.cpp  clpp_buffer_readwrite.cpp  clpp_buffer_rectangle.cpp  clpp_command_queue.cpp  clpp_context.cpp  clpp_event_profiling.cpp  clpp_info.cpp  clpp_kernel_execution.cpp  clpp_kernel_object.cpp  clpp_program_object.cpp  matrix_transpose.cl  matrix_transpose_double.cl  matrix_transpose_float.cl  shared.hpp  vector_add.cl
CLplusplus/: buffer.cpp  buffer.hpp  command_queue.cpp  command_queue.hpp  common.cpp  common.hpp  context.cpp  context.hpp  device.cpp  device.hpp  event.cpp  event.hpp  extensions.cpp  extensions.hpp  image.cpp  image.hpp  kernel.cpp  kernel.hpp  memory_object.cpp  memory_object.hpp  platform.cpp  platform.hpp  program.cpp  program.hpp  properties.cpp  properties.hpp  property_list.cpp  property_list.hpp  queries.cpp  queries.hpp  version.cpp  version.hpp
Documentation/: api_platform_layer.adoc  getting_started.adoc  index.html
doc/: CMakeLists.txt  api_architecture.adoc  api_description.adoc  api_runtime_layer.adoc  index.adoc  introduction.adoc
examples/: CMakeLists.txt
examples/include/: shared.hpp
examples/src/: application_matmul.cpp  buffer_fill_map.cpp  buffer_object.cpp  buffer_readwrite.cpp  clpp_info.cpp  event_profiling.cpp  image_object.cpp  kernel_execution.cpp  kernel_object.cpp  program_object.cpp  run_tests.cpp
examples/src/kernels/: matrix_multiply_double.cl  matrix_transpose_float.cl
include/: CMakeLists.txt
include/CLplusplus/: buffer.hpp  command_queue.hpp  common.hpp  context.hpp  device.hpp  event.hpp  extensions.hpp  image.hpp  kernel.hpp  memory_object.hpp  platform.hpp  profile.hpp  program.hpp  property_list.hpp  property_list_impl.hpp  version.hpp
src/: CMakeLists.txt  command_queue.cpp  common.cpp  context.cpp  device.cpp  event.cpp  kernel.cpp  memory_object.cpp  platform.cpp  profile.cpp  program.cpp  property_list.cpp  queries.cpp  version.cpp
